--- a/part3/phonebook_backend/package.json
+++ b/part3/phonebook_backend/package.json
@@ -11,6 +11,8 @@
   "author": "Sami Luomansuu",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
