--- a/part4/bloglist_backend/package.json
+++ b/part4/bloglist_backend/package.json
@@ -7,13 +7,19 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "Sami Luomansuu",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
