Part5 bloglist: Added cypress and e2e tests
-(test) page landing
-(test) login form
-(test) login
-(test) create blog

Part4 bloglist_backend: Added testing route

Project: Exericses 5-17-5.20 done

--- a/part5/bloglist/.eslintrc.json
+++ b/part5/bloglist/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "es6": true,
-        "jest/globals": true
+        "jest/globals": true,
+        "cypress/globals": true
     },
     "extends": [
         "eslint:recommended",
@@ -17,7 +18,8 @@
     },
     "plugins": [
         "react",
-        "jest"
+        "jest",
+        "cypress"
     ],
     "rules": {
         "indent": [
