--- a/part6/anecdotes-query/package.json
+++ b/part6/anecdotes-query/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +40,6 @@
   },
   "devDependencies": {
     "json-server": "^0.17.1"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
