--- a/part7/bloglist/.eslintrc.json
+++ b/part7/bloglist/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "env": {
         "browser": true,
+        "node": true,
         "es6": true,
         "jest/globals": true,
         "cypress/globals": true
@@ -24,7 +25,8 @@
     "rules": {
         "indent": [
             "error",
-            2
+            2,
+            { "SwitchCase": 1}
         ],
         "quotes": [
             "error",
@@ -43,6 +45,10 @@
             "error", { "before": true, "after": true }
         ],
         "no-console": 0,
+        "no-unused-vars": [
+            "error",
+            { "argsIgnorePattern": "^_" }
+        ],
         "react/prop-types": 0,
         "react/react-in-jsx-scope": "off"
     },
