--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -12,13 +12,19 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "@graphql-tools/schema": "^10.0.16",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.21.2",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "mongoose-unique-validator": "^4.0.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
