Project: submodules track main

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "part9/patientor_frontend"]
 	path = part9/patientor_frontend
 	url = https://github.com/luomanss/patientor.git
+	branch = main
 [submodule "part9/flight_diary_backend"]
 	path = part9/flight_diary_backend
 	url = https://github.com/luomanss/flight-diary.git
+	branch = main
